Fixed improper integer typing